# fe-251020

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env  main.py  pyproject.toml
backend/src/: app.py
backend/src/utils/: main.py
frontend/: .env  eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.css  main.tsx  vite-env.d.ts
frontend/src/components/mcq/: index.tsx
frontend/src/components/problem/: index.module.scss  index.tsx
frontend/src/components/problem-gen/: index.module.css  index.tsx
frontend/src/layout/: index.module.scss  index.tsx
frontend/src/pages/auth/: index.tsx
frontend/src/pages/auth-page/: index.module.scss  index.tsx
frontend/src/pages/history/: index.module.scss  index.tsx
frontend/src/pages/home/: index.module.css  index.module.scss  index.tsx
frontend/src/pages/homepage/: index.module.css  index.tsx
frontend/src/router/: routes-data.ts  routes-declarative.tsx
frontend/src/types/: index.ts
