[project]
dependencies = [
  "clerk-backend-api>=3.3.1",
  "fastapi>=0.119.0",
  "openai>=2.5.0",
  "python-dotenv>=1.1.1",
  "sqlalchemy>=2.0.44",
  "uvicorn>=0.38.0",
]
description = "Add your description here"
name = "@fe-251020/backend"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
